# card-pack-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  test_all_providers.py  test_embed_e2e.py  test_embedding.py  test_fix_verify.py  test_generator_real.py  test_image_gen.py  test_image_raw.py  test_judge_stability.py  test_planner_real.py  test_raw_providers.py
docs/: ci-workflow-eval.yml  english-migration-questions.md  plan.md  troubleshooting-log.md
eval/datasets/: holdout.jsonl
eval/judges/: classify_judge.md  generation_judge.md
eval/runners/: classify.py  generate.py  inject.py  retrieve.py
knowledge/: failure_library.md  global_anti_patterns.md  global_style_guide.md  metrics_calibration.md  taxonomy.md
knowledge/categories/: emotional.md  festival.md  trending_event.md
knowledge/prompt_templates/: generator_cards.v1.md  generator_script.v1.md  planner.v1.md  reviewer.v1.md
migrations/: 001_init.sql
qdrant_data/: meta.json
scripts/: backfill_artifacts.py  bench_image_providers.py  check_eval_thresholds.py  generate_pack.py  init_db.py  recalibrate_tiers.py  run_eval.py  run_web.py  seed_synthetic.py  validate_knowledge.py
src/card_pack_agent/: __init__.py  cli.py  config.py  feedback.py  json_utils.py  llm.py  logging.py  orchestrator.py  schemas.py  structured_output.py
src/card_pack_agent/agents/: __init__.py  generator.py  generator_cards_batched.py  planner.py  (+1 more)
tests/: conftest.py  test_image_new_providers.py  test_image_subsystem.py  test_json_and_structured.py  test_smoke_pipeline.py  test_smoke_structure.py
(+33 files in other folders)
